--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "exif-js": "^2.3.0",
     "vue": "^2.5.17"
   },
   "browserslist": [
