--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "vux-uploader",
-  "description": "vux uploader implementation for weui",
+  "name": "real-vux-uploader",
+  "description": "a html5 vue component implementation for weui uploader",
   "version": "1.0.0",
   "author": "eJay",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
