--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "exif-js": "^2.3.0",
-    "vue": "^2.5.17"
+    "exif-js": "^2.3.0"
+  },
+  "peerDependencies": {
+    "vue": ">=2.2"
   },
   "browserslist": [
     "> 1%",
@@ -32,6 +34,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "vconsole": "^3.2.0",
+    "vue": "^2.5.17",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
