fix: add build:demo command for example build

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "1.0.0",
   "author": "eJay",
   "license": "MIT",
+  "main": "dist/build.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build:demo": "cross-env NODE_ENV=sample webpack --progress --hide-modules",
+    "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "version": "npm run changelog",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build:prod"
   },
+  "pre-push": "build:demo",
   "dependencies": {
     "exif-js": "^2.3.0"
   },
@@ -33,6 +36,7 @@
     "file-loader": "^1.1.4",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "pre-push": "^0.1.1",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^13.0.5",
