refactor: build folder structure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "dist/build.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build:demo": "cross-env NODE_ENV=sample webpack --progress --hide-modules",
+    "build:demo": "rm -rf example/build.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
     "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "version": "npm run changelog",
@@ -38,11 +38,13 @@
     "file-loader": "^1.1.4",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "pre-commit": "^1.2.2",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^2.9.1"
   }
 }
