--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
   "main": "dist/build.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build:demo": "rm -rf example/build.js && cross-env NODE_ENV=sample webpack --progress --hide-modules && git add .",
+    "build:demo": "rm -rf example/build.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
     "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "version": "npm run changelog",
     "prepublishOnly": "npm run build:prod"
   },
-  "pre-commit": [
-    "build:demo"
-  ],
   "dependencies": {
     "exif-js": "^2.3.0"
   },
