--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
   "presets": [
     ["env", { "modules": false }],
     "stage-3"
+  ],
+  "plugins": [
+    "transform-runtime",
+    "transform-async-to-generator"
   ]
 }
