--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build:demo": "rm -rf example/build.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
     "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "lint": "eslint --ext .js,.vue src",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "version": "npm run changelog",
     "prepublishOnly": "npm run build:prod",
@@ -35,11 +36,13 @@
     "conventional-changelog-cli": "^2.0.5",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "eslint": "^5.6.1",
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
     "express": "^4.16.3",
     "file-loader": "^1.1.4",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "pre-commit": "^1.2.2",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^13.0.5",
