--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "version": "npm run changelog",
     "prepublishOnly": "npm run build:prod",
-    "server": "node server.js"
+    "server": "nodemon  server.js"
   },
   "dependencies": {
     "exif-js": "^2.3.0"
@@ -43,6 +43,8 @@
     "file-loader": "^1.1.4",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "multer": "^1.4.0",
+    "nodemon": "^1.18.4",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^13.0.5",
