--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,5 @@
 node_modules/
 npm-debug.log
 yarn-error.log
-
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+dist/
+example/build.js
