ci: after_script push code to git repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,19 @@ node_js:
 script:
   - npm run build:demo
 
+after_script:
+  - git add .
+  - git commit -m "build:online demo"
+  - git push "https://${GITHUB_TOKEN}@${GITHUB_REPO}" master:${PUSH_BRANCH}
+
+branches:
+  only:
+    - master
+
+cache:
+  directories:
+    - "node_modules"
+
 deploy:
  provider: pages
  skip-cleanup: true
