--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,15 @@
 {
   "presets": [
-    ["env", { "modules": false }],
+    ["env"],
     "stage-3"
   ],
   "plugins": [
     "transform-runtime",
     "transform-async-to-generator"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
