--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "1.0.0",
   "author": "eJay",
   "license": "MIT",
-  "main": "dist/build.js",
+  "main": "dist/uploader.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build:demo": "rm -rf example/build.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
+    "build:demo": "rm -rf dist/example.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
     "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/karma.conf.js --signle-run",
     "lint": "eslint --ext .js,.vue src",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "version": "npm run changelog",
@@ -27,22 +28,33 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^5.0.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "conventional-changelog-cli": "^2.0.5",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
     "eslint": "^5.6.1",
     "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "express": "^4.16.3",
     "file-loader": "^1.1.4",
+    "karma": "^3.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mocha": "^5.2.0",
     "multer": "^1.4.0",
     "nodemon": "^1.18.4",
     "vconsole": "^3.2.0",
@@ -51,6 +63,7 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.4"
   }
 }
