test: pref test flow

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.5",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
