--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.4"
   }
 }
