--- a/package.json
+++ b/package.json
@@ -57,14 +57,14 @@
     "less-loader": "^4.1.0",
     "mocha": "^5.2.0",
     "multer": "^1.4.0",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.11",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": ">=3.1.11",
+    "webpack-dev-server": "^3.0.0",
     "webpack-merge": "^4.1.4"
   }
 }
