--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "dist/uploader.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build:demo": "rm -rf dist/example.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
     "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/karma.conf.js --signle-run",
     "lint": "eslint --ext .js,.vue src",
