--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "server": "nodemon  server.js"
   },
   "dependencies": {
-    "alloyfinger": "^0.1.16",
-    "exif-js": "^2.3.0"
+    "exif-js": "^2.3.0",
+    "photoswipe": "^4.1.3"
   },
   "peerDependencies": {
     "vue": ">=2.2"
