--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.5",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
     "eslint": "^5.6.1",
