refactor: upgrade webpack and configuration

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "main": "dist/uploader.js",
   "scripts": {
-    "dev": "webpack server --mode=development --open",
-    "build:demo": "rm -rf dist/example.js && cross-env NODE_ENV=sample webpack --progress --hide-modules",
-    "build:prod": "rm -rf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "dev": "webpack server --mode development --open ",
+    "build:demo": "rm -rf dist/example.js && webpack --mode development --progress",
+    "build:prod": "rm -rf dist/ && webpack --mode production --progress",
     "test": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/karma.conf.js --signle-run",
     "lint": "eslint --ext .js,.vue src",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
@@ -40,7 +40,6 @@
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.5",
     "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
     "css-loader": "^5.2.6",
     "eslint": "^5.6.1",
     "eslint-plugin-html": "^4.0.6",
